# linked_list

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.c  linked_list.c  linked_list.h
.github/workflows/: codeql.yml
